; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/target/extr_target_core_alua.c_core_alua_state_standby.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/target/extr_target_core_alua.c_core_alua_state_standby.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.se_cmd = type { i32 }

@ASCQ_04H_ALUA_TG_PT_STANDBY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.se_cmd*, i8*, i32*)* @core_alua_state_standby to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @core_alua_state_standby(%struct.se_cmd* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.se_cmd*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store %struct.se_cmd* %0, %struct.se_cmd** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = getelementptr inbounds i8, i8* %8, i64 0
  %10 = load i8, i8* %9, align 1
  %11 = zext i8 %10 to i32
  switch i32 %11, label %33 [
    i32 144, label %12
    i32 143, label %12
    i32 142, label %12
    i32 138, label %12
    i32 137, label %12
    i32 131, label %12
    i32 132, label %12
    i32 129, label %12
    i32 141, label %13
    i32 140, label %23
    i32 130, label %32
    i32 135, label %32
    i32 134, label %32
    i32 133, label %32
    i32 128, label %32
  ]

12:                                               ; preds = %3, %3, %3, %3, %3, %3, %3, %3
  store i32 0, i32* %4, align 4
  br label %36

13:                                               ; preds = %3
  %14 = load i8*, i8** %6, align 8
  %15 = getelementptr inbounds i8, i8* %14, i64 1
  %16 = load i8, i8* %15, align 1
  %17 = zext i8 %16 to i32
  %18 = and i32 %17, 31
  switch i32 %18, label %20 [
    i32 139, label %19
  ]

19:                                               ; preds = %13
  store i32 0, i32* %4, align 4
  br label %36

20:                                               ; preds = %13
  %21 = load i32, i32* @ASCQ_04H_ALUA_TG_PT_STANDBY, align 4
  %22 = load i32*, i32** %7, align 8
  store i32 %21, i32* %22, align 4
  store i32 1, i32* %4, align 4
  br label %36

23:                                               ; preds = %3
  %24 = load i8*, i8** %6, align 8
  %25 = getelementptr inbounds i8, i8* %24, i64 1
  %26 = load i8, i8* %25, align 1
  %27 = zext i8 %26 to i32
  switch i32 %27, label %29 [
    i32 136, label %28
  ]

28:                                               ; preds = %23
  store i32 0, i32* %4, align 4
  br label %36

29:                                               ; preds = %23
  %30 = load i32, i32* @ASCQ_04H_ALUA_TG_PT_STANDBY, align 4
  %31 = load i32*, i32** %7, align 8
  store i32 %30, i32* %31, align 4
  store i32 1, i32* %4, align 4
  br label %36

32:                                               ; preds = %3, %3, %3, %3, %3
  store i32 0, i32* %4, align 4
  br label %36

33:                                               ; preds = %3
  %34 = load i32, i32* @ASCQ_04H_ALUA_TG_PT_STANDBY, align 4
  %35 = load i32*, i32** %7, align 8
  store i32 %34, i32* %35, align 4
  store i32 1, i32* %4, align 4
  br label %36

36:                                               ; preds = %33, %32, %29, %28, %20, %19, %12
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
